Добавленно логирование в файл app.log, написан LoggingAspect, LogService, Exception хэндлеры, гет метод протестирован и работает