@@ -1,6 +1,8 @@
 package com.example.javalabs.services.impl;
 
 import com.example.javalabs.cache.FreelancerCache;
+import com.example.javalabs.exceptions.NotFoundException;
+import com.example.javalabs.exceptions.ValidationException;
 import com.example.javalabs.models.Freelancer;
 import com.example.javalabs.models.Order;
 import com.example.javalabs.models.Skill;
@@ -12,6 +14,8 @@ import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -20,7 +24,8 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @Transactional
 public class FreelancerServiceImpl implements FreelancerService {
-    private static final Logger SERVICE_LOGGER = LoggerFactory.getLogger(FreelancerServiceImpl.class);
+
+    private static final Logger logger = LoggerFactory.getLogger(FreelancerServiceImpl.class);
 
     private final FreelancerRepository freelancerRepository;
     private final OrderRepository orderRepository;
@@ -43,13 +48,14 @@ public class FreelancerServiceImpl implements FreelancerService {
         if (freelancer.getSkills() == null) freelancer.setSkills(new HashSet<>());
         Freelancer savedFreelancer = freelancerRepository.save(freelancer);
         freelancerCache.clear();
+        logger.info("Freelancer created with ID: {}", savedFreelancer.getId());
         return savedFreelancer;
     }
 
     @Override
     public Freelancer getFreelancerById(Long id) {
         return freelancerRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Freelancer with ID " + id + " not found"));
+                .orElseThrow(() -> new NotFoundException("Freelancer with ID " + id + " not found"));
     }
 
     @Override
@@ -59,8 +65,10 @@ public class FreelancerServiceImpl implements FreelancerService {
         freelancer.setCategory(freelancerDetails.getCategory());
         freelancer.setRating(freelancerDetails.getRating());
         freelancer.setHourlyRate(freelancerDetails.getHourlyRate());
+        Freelancer updatedFreelancer = freelancerRepository.save(freelancer);
         freelancerCache.clear();
-        return freelancerRepository.save(freelancer);
+        logger.info("Freelancer updated with ID: {}", id);
+        return updatedFreelancer;
     }
 
     @Override
@@ -68,6 +76,7 @@ public class FreelancerServiceImpl implements FreelancerService {
         Freelancer freelancer = getFreelancerById(id);
         freelancerRepository.delete(freelancer);
         freelancerCache.clear();
+        logger.info("Freelancer deleted with ID: {}", id);
     }
 
     @Override
@@ -77,7 +86,9 @@ public class FreelancerServiceImpl implements FreelancerService {
         order.setFreelancer(freelancer);
         freelancer.getOrders().add(order);
         orderRepository.save(order);
-        return freelancerRepository.save(freelancer);
+        Freelancer updatedFreelancer = freelancerRepository.save(freelancer);
+        logger.info("Order added to freelancer with ID: {}", freelancerId);
+        return updatedFreelancer;
     }
 
     @Override
@@ -85,36 +96,40 @@ public class FreelancerServiceImpl implements FreelancerService {
         Freelancer freelancer = getFreelancerById(freelancerId);
         Optional<Skill> existingSkill = skillRepository.findByName(skillName);
         Skill skill = existingSkill.orElseGet(() -> skillRepository.save(new Skill(skillName)));
-        freelancer.getSkills().add(skill);
+        if (!freelancer.getSkills().add(skill)) {
+            throw new ValidationException("Skill '" + skillName + "' is already associated with freelancer with ID " + freelancerId);
+        }
+        Freelancer updatedFreelancer = freelancerRepository.save(freelancer);
         freelancerCache.clear();
-        return freelancerRepository.save(freelancer);
+        logger.info("Skill '{}' added to freelancer with ID: {}", skillName, freelancerId);
+        return updatedFreelancer;
     }
 
     @Override
     public void deleteOrderFromFreelancer(Long freelancerId, Long orderId) {
         Freelancer freelancer = getFreelancerById(freelancerId);
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("Order with ID " + orderId + " not found"));
+                .orElseThrow(() -> new NotFoundException("Order with ID " + orderId + " not found"));
         if (!order.getFreelancer().getId().equals(freelancerId)) {
-            throw new IllegalArgumentException("Order with ID " + orderId +
-                                               " does not belong to Freelancer with ID " + freelancerId);
+            throw new ValidationException("Order with ID " + orderId + " does not belong to freelancer with ID " + freelancerId);
         }
         freelancer.getOrders().remove(order);
         orderRepository.delete(order);
         freelancerRepository.save(freelancer);
+        logger.info("Order with ID {} deleted from freelancer with ID: {}", orderId, freelancerId);
     }
 
     @Override
     public void deleteSkillFromFreelancer(Long freelancerId, Long skillId) {
         Freelancer freelancer = getFreelancerById(freelancerId);
         Skill skill = skillRepository.findById(skillId)
-                .orElseThrow(() -> new IllegalArgumentException("Skill with ID " + skillId + " not exist"));
+                .orElseThrow(() -> new NotFoundException("Skill with ID " + skillId + " not found"));
         if (!freelancer.getSkills().remove(skill)) {
-            throw new IllegalArgumentException("Skill with ID " + skillId +
-                                               " is not associated with Freelancer with ID " + freelancerId);
+            throw new ValidationException("Skill with ID " + skillId + " is not associated with freelancer with ID " + freelancerId);
         }
         freelancerRepository.save(freelancer);
         freelancerCache.clear();
+        logger.info("Skill with ID {} deleted from freelancer with ID: {}", skillId, freelancerId);
     }
 
     @Override
@@ -126,9 +141,9 @@ public class FreelancerServiceImpl implements FreelancerService {
             startTime = System.nanoTime();
             freelancers = freelancerCache.getFreelancers(category, skillName).stream()
                     .sorted(Comparator.comparingLong(Freelancer::getId))
-                    .toList();
+                    .collect(Collectors.toList());
             long endTime = System.nanoTime();
-            SERVICE_LOGGER.info("Data retrieved from cache in {} ns", endTime - startTime);
+            logger.info("Data retrieved from cache in {} ns for category: {}, skillName: {}", endTime - startTime, category, skillName);
             return freelancers;
         }
 
@@ -136,9 +151,9 @@ public class FreelancerServiceImpl implements FreelancerService {
         freelancers = freelancerRepository.findByCategoryAndSkill(category, skillName)
                 .stream()
                 .sorted(Comparator.comparingLong(Freelancer::getId))
-                .toList();
+                .collect(Collectors.toList());
         long endTime = System.nanoTime();
-        SERVICE_LOGGER.info("Data retrieved from database in {} ns", endTime - startTime);
+        logger.info("Data retrieved from database in {} ns for category: {}, skillName: {}", endTime - startTime, category, skillName);
 
         freelancerCache.putFreelancers(category, skillName, freelancers);
         return freelancers;
